--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -4,5 +4,8 @@
     "printWidth": 80,
     "useTabs": false,
     "singleQuote": false,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "extends": ["prettier/react"]  
 }
+
